kubernetes/ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-marker-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    run: ui
